[package]
name = "geopolars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geozero = { version = "0.9.4", features = ["with-wkb"] }
rstar = "0.9.3"
geo = { git = "https://github.com/georust/geo.git", rev = '578e213875915e1f895892487b5a36ca0d91fac3' }
polars = { git = "https://github.com/stuartlynn/polars.git", branch = 'wasm_rebase', default-features = false, features = ["ipc", "dtype-u8", "dtype-i8"] }
getrandom = { version = "0.2", features = ['js'] }

[lib]
crate-type = ["cdylib", "rlib"]
